2003-12-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 1.3-6 - released

	* R/zzz.R (.First.lib): mva or stats depending on R version
	* R/entropy.R (AIC): AIC.vlmc for R ver < 1.4

2003-11-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 1.3-5 - release to CRAN

	* man/alphabet.Rd: finally added
	* man/int2char.Rd: link to and from
	* man/alpha2int.Rd: <ditto>

2003-10-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* TODO: some update; need to prioritize this!

	* man/as.dendrogram.vlmc.Rd: example had typo; now also extended

2003-09-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Note): instead of `Versionnote'

2003-09-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dendrogram.R (as.dendrogram.vlmc): much better; still to go
	* man/as.dendrogram.vlmc.Rd (as.dendrogram.vlmc): first plot

2003-09-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/alphabet.R: new alphabet() generic and method.
	  	a first step towards extending alphabet size to more than 26

2003-08-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/simulate.vlmc.Rd: typo; see also.
	* man/predict.vlmc.Rd: see also to simulate.

2003-08-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/vlmc.R (vlmc): argument must be atomic ("simple vector")

2003-07-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/iid-cutoff.R: use old RNG (back-compat.)
	* tests/iid-cutoff.Rout.save: ditto; (+ overdue update)

	* tests/pred-vlmc.Rout.save: <NA> in output

	* man/vlmc.Rd: extraneous `object'

2003-01-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-4

	* man/vlmc.Rd: updated JCGS reference

2002-11-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/cutoffs.c:
	* src/drawvlmc.c:
	* src/saveload.c (ifndef Macintosh): changes from Stefano I.

2002-11-25  Martin Maechler  <maechler@stat.math.ethz.ch>
