@@ -1,7 +1,7 @@
 Package: VLMC
-Version: 1.3-6
+Version: 1.3-7
 Note:    ===== vlmc.version in R/vlmc.R
-Date: 2003-12-17
+Date: 2004-05-05
 Author: Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Title: VLMC -- Variable Length Markov Chains
@@ -9,3 +9,4 @@ Description: Functions, Classes & Methods for estimation, prediction, and
   simulation (bootstrap) of VLMC -- Variable Length Markov Chain -- Models
 Depends: MASS
 License: GPL version 2 or later
+Packaged: Wed May  5 18:42:49 2004; maechler
