@@ -8,7 +8,7 @@
 \examples{
 vlmc.version
 \dontrun{
-[1] "VLMC 1.3-3;  after $Date: 2002/03/13 10:50:38 $ UTC"
+[1] "VLMC 1.3-7;  after $Date: 2004/05/05 16:41:47 $ UTC"
 }
 }
 \keyword{data}
