@@ -1,0 +1,87 @@
+Here I want to finally explore / explain  how the C code works :
+
+vlmc()		[R]		../R/vlmc.R
+ |
+ |--> vlmc_p()			fitvlmc.c
+ |    \-> vlmc()	  	  "
+ |	  |--> vlmcinit_alpha()	?
+ |	  |--> create_set()	?
+ |	  |--> push()		?
+ |	  |--> create_node()	?
+ |	  |--> generate()	?
+ |	  |--> dump_tree()	io.c
+ |	  |--> prune()		?
+ |	  |--> comp_difference  ?
+ |	  |--> write_tree()	io.c
+ |	  \--> tree_size()	saveload.c
+ |
+ \--> getvlmc()			fitvlmc.c
+      |-> save_tree()		saveload.c
+      \-> free_node()		?
+
+
+predict.vlmc()		[R]	../R/predict.R
+ |
+ \--> predict_vlmc_p()		predict.c
+      \--> predict_vlmc()	  "
+	   |-> copy_tree()	?
+	   |-> load_tree()	saveload.c
+	   |-> cumulate()	?
+	   \-> free_node()	?
+
+logLik.vlmc()		[R]	../R/entropy.R
+ |
+ \-> entropy()		[R]	../R/entropy.R
+     |
+     \--> entropy_sub()		entropy.c
+          |
+	  |--> load_tree()	saveload.c
+	  |--> entropy()	util.c
+	  \--> free_node()	?
+
+draw.vlmc()		[R]	../R/draw.R
+ |
+ \--> draw_p()			drawvlmc.c
+      \--> draw()	  	  "
+	   |-> draw_tree()	io.c
+	   |-> vlmcinit_alpha()	?
+	   |-> load_tree()	saveload.c
+	   |-> cumulate()	?
+	   \-> free_node()	?
+
+----
+
+	   |-> read_tree()	io.c
+
+
+
+The list of relevant files in  /u/maechler/R/MM/STATISTICS/VLMC/VLMC/src/
+
+*.c:
+
+   2888	 Nov 29	 2002 cutoffs.c
+    801	 Sep  8 20:32 data.c -> ../../data.c
+   1976	 Nov 29	 2002 drawvlmc.c
+   1305	 Oct  3	 2001 entropy.c
+   4060	 Feb  8	 2002 fitvlmc.c
+   1333	 Sep  8 20:32 gen.c -> ../../gen.c
+    523	 Oct  1	 2001 init_alpha.c
+   7578	 Sep  8 20:32 io.c -> ../../io.c
+   5070	 Sep  7	 2000 predict.c
+    861	 Sep  8 20:32 prune.c -> ../../prune.c
+   4096	 Nov 29	 2002 saveload.c
+   1230	 Feb 22	 2001 sim.c
+   5470	 Sep  8 20:32 util.c -> ../../util.c
+
+*.h:
+
+    239	 Sep  8 20:32 alphabet.h -> ../../alphabet.h
+    140	 Mar  3	 2000 alpha_init.h
+    140	 Aug  9	 2000 predict.h
+    250	 Apr 21	 2000 subutil.h
+    221	 Mar 17	 2000 vlmc_data.h
+    289	 Sep  8 20:32 vlmc_data_stdalone.h -> ../../vlmc_data.h
+    225	 Sep  8 20:32 vlmc_gen.h -> ../../vlmc_gen.h
+   3495	 Sep  8 20:32 vlmc.h -> ../../vlmc.h
+    545	 Sep  8 20:32 vlmc_io.h -> ../../vlmc_io.h
+
